--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-# Good-Morning-
 <!doctype html>
 <html lang="vi">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Gift → Good Morning</title>
+  <title>Gift Spin → Good Morning</title>
   <style>
     :root{
       --bg:#0b1020;
       --card:#ffffff10;
       --text:#f6f7fb;
+      --muted:#d9dcff;
     }
     *{box-sizing:border-box}
     body{
@@ -31,54 +31,86 @@
       background:#00000033;
       backdrop-filter: blur(10px);
       font-size:14px;
-      color:#d9dcff;
+      color:var(--muted);
       text-align:center;
       user-select:none;
     }
 
-    /* Gift travels across */
     .stage{
       position:relative;
       width:min(980px, 92vw);
-      height:420px;
+      height:460px;
       border-radius:26px;
       border:1px solid #ffffff1a;
       background: var(--card);
       backdrop-filter: blur(10px);
       box-shadow: 0 24px 70px #00000055;
       overflow:hidden;
+      display:grid;
+      place-items:center;
     }
 
-    .floor{
-      position:absolute; left:0; right:0; bottom:0;
-      height:120px;
-      background: linear-gradient(180deg, transparent, #00000035);
+    /* Confetti layer */
+    .confetti{
+      position:absolute; inset:0;
+      pointer-events:none;
+      overflow:hidden;
     }
-
-    .runner{
+    .c{
       position:absolute;
-      left:-220px;
-      bottom:110px;
-      width:220px; height:220px;
-      animation: travel 6.5s ease-in-out infinite alternate;
-      will-change: transform;
+      top:-12px;
+      width:10px; height:14px;
+      border-radius:3px;
+      opacity:.95;
+      animation: fall linear forwards;
+    }
+    @keyframes fall{
+      to{ transform: translateY(110vh) rotate(720deg); }
+    }
+
+    /* Gift container - spins */
+    .runner{
+      width:240px; height:240px;
+      display:grid; place-items:center;
       cursor:pointer;
       user-select:none;
+      outline:none;
+      animation: spin 1.7s linear infinite;
+      will-change: transform;
     }
-    @keyframes travel{
-      0%   { transform: translateX(0) translateY(0) rotate(-2deg); }
-      50%  { transform: translateX(calc(50% + 120px)) translateY(-6px) rotate(2deg); }
-      100% { transform: translateX(calc(100% + 220px)) translateY(0) rotate(-2deg); }
+    @keyframes spin{
+      to{ transform: rotate(360deg); }
     }
 
-    /* Gift box */
-    .gift{
-      position:absolute; inset:0;
-      display:grid; place-items:center;
-      transform: translateY(6px);
+    /* When opened: stop spinning */
+    .opened .runner{
+      animation-play-state: paused;
     }
-    .box{
+
+    /* Gift drawing */
+    .gift{
       position:relative;
+      width:180px; height:180px;
+      display:grid; place-items:center;
+      transform: rotate(-8deg); /* make it cute while spinning */
+    }
+
+    .glow{
+      position:absolute; left:50%; top:42%;
+      width:260px; height:260px;
+      transform:translate(-50%,-50%);
+      background: radial-gradient(circle at 50% 50%, #ffffffaa 0%, #ffd16655 25%, transparent 60%);
+      filter: blur(2px);
+      opacity:0;
+      transition: opacity 450ms ease;
+      pointer-events:none;
+    }
+    .opened .glow{ opacity:1; }
+
+    .box{
+      position:absolute;
+      left:50%; bottom:18px;
+      transform:translateX(-50%);
       width:160px; height:120px;
       border-radius:18px;
       background: linear-gradient(180deg, #ff4d6d, #d61f4b);
@@ -98,12 +130,11 @@
       height:18px;
       background: #ffffff12;
       border-radius:999px;
-      filter: blur(0.2px);
     }
 
     .lid{
       position:absolute;
-      left:50%; top:-18px;
+      left:50%; top:36px;
       width:178px; height:56px;
       transform: translateX(-50%);
       transform-origin: 20% 90%;
@@ -111,6 +142,7 @@
       background: linear-gradient(180deg, #ff6b85, #e11d48);
       box-shadow: 0 12px 24px #00000040;
       transition: transform 700ms cubic-bezier(.2,.9,.2,1);
+      z-index:3;
     }
     .lid:before{
       content:"";
@@ -123,10 +155,11 @@
 
     .bow{
       position:absolute;
-      left:50%; top:-44px;
+      left:50%; top:8px;
       width:110px; height:70px;
       transform:translateX(-50%);
       pointer-events:none;
+      z-index:4;
     }
     .bow .loop{
       position:absolute; top:18px;
@@ -147,7 +180,7 @@
       box-shadow: 0 6px 12px #00000033;
     }
 
-    /* Open state */
+    /* Open lid */
     .opened .lid{
       transform: translateX(-50%) rotate(-125deg) translateY(-10px);
     }
@@ -155,9 +188,9 @@
     /* Message pop */
     .message{
       position:absolute;
-      left:50%; top:48%;
+      left:50%; top:50%;
       transform: translate(-50%,-50%) scale(.85);
-      width:min(720px, 88vw);
+      width:min(760px, 90vw);
       text-align:center;
       opacity:0;
       pointer-events:none;
@@ -165,94 +198,66 @@
     }
     .message h1{
       margin:0 0 10px;
-      font-size: clamp(34px, 6vw, 64px);
+      font-size: clamp(34px, 6vw, 70px);
       letter-spacing: 2px;
       text-shadow: 0 18px 40px #00000066;
     }
     .message p{
       margin:0;
-      color:#d9dcff;
+      color:var(--muted);
       font-size: clamp(14px, 2.3vw, 18px);
     }
-    .opened + .message{
+    .opened .message{
       opacity:1;
       transform: translate(-50%,-50%) scale(1);
     }
 
-    /* Confetti */
-    .confetti{
-      position:absolute; inset:0;
-      pointer-events:none;
-      overflow:hidden;
+    /* Focus ring */
+    .runner:focus{
+      outline: 3px solid #ffffff55;
+      outline-offset: 10px;
+      border-radius: 26px;
     }
-    .c{
-      position:absolute;
-      top:-12px;
-      width:10px; height:14px;
-      border-radius:3px;
-      opacity:.95;
-      animation: fall linear forwards;
-    }
-    @keyframes fall{
-      to{ transform: translateY(110vh) rotate(720deg); }
-    }
-
-    /* Little spark glow when opened */
-    .glow{
-      position:absolute; left:50%; top:40%;
-      width:260px; height:260px;
-      transform:translate(-50%,-50%);
-      background: radial-gradient(circle at 50% 50%, #ffffffaa 0%, #ffd16655 25%, transparent 60%);
-      filter: blur(2px);
-      opacity:0;
-      transition: opacity 450ms ease;
-      pointer-events:none;
-    }
-    .opened .glow{ opacity:1; }
-
-    /* Accessibility focus */
-    .runner:focus{ outline: 3px solid #ffffff55; outline-offset: 8px; border-radius:22px; }
   </style>
 </head>
 
 <body>
-  <div class="hint">Bấm vào hộp quà (hoặc nhấn Space/Enter) để mở 🎁 → “GOOD MORNING”</div>
+  <div class="hint">Hộp quà đang xoay 🎁 — bấm vào (hoặc Space/Enter) để mở ra “GOOD MORNING”</div>
 
-  <div class="stage">
+  <div class="stage" id="stage">
     <div class="confetti" id="confetti"></div>
-    <div class="floor"></div>
 
     <div class="runner" id="runner" role="button" tabindex="0" aria-label="Open gift">
-      <div class="gift" id="gift">
+      <div class="gift">
         <div class="glow"></div>
 
-        <div class="box">
-          <div class="lid"></div>
-          <div class="bow">
-            <div class="loop left"></div>
-            <div class="loop right"></div>
-            <div class="knot"></div>
-          </div>
+        <div class="box"></div>
+        <div class="lid"></div>
+
+        <div class="bow">
+          <div class="loop left"></div>
+          <div class="loop right"></div>
+          <div class="knot"></div>
         </div>
       </div>
     </div>
 
-    <div class="message" id="message">
+    <div class="message">
       <h1>GOOD MORNING ☀️</h1>
       <p>Chúc bạn một ngày mới vui vẻ, nhiều năng lượng và may mắn!</p>
     </div>
   </div>
 
   <script>
-    const runner = document.getElementById('runner');
-    const gift = document.getElementById('gift');
-    const confetti = document.getElementById('confetti');
+    const stage = document.getElementById("stage");
+    const runner = document.getElementById("runner");
+    const confetti = document.getElementById("confetti");
 
     let opened = false;
 
     function blastConfetti(){
       confetti.innerHTML = "";
-      const n = 140;
+      const n = 160;
       for(let i=0;i<n;i++){
         const d = document.createElement("div");
         d.className = "c";
@@ -277,22 +282,18 @@
       if(opened) return;
       opened = true;
 
-      gift.classList.add("opened");
-
-      // stop moving at current position
-      runner.style.animationPlayState = "paused";
-
+      stage.classList.add("opened"); // stops spinning + opens lid + shows message
       blastConfetti();
 
-      // little bounce effect
+      // tiny bounce
       runner.animate(
-        [{ transform: getComputedStyle(runner).transform }, { transform: "translateY(-8px)" }, { transform: "translateY(0)" }],
+        [{ transform: "scale(1)" }, { transform: "scale(1.06)" }, { transform: "scale(1)" }],
         { duration: 380, easing: "cubic-bezier(.2,.8,.2,1)" }
       );
     }
 
-    runner.addEventListener('click', openGift);
-    runner.addEventListener('keydown', (e) => {
+    runner.addEventListener("click", openGift);
+    runner.addEventListener("keydown", (e) => {
       if(e.key === " " || e.key === "Enter"){
         e.preventDefault();
         openGift();
